Fixed navbar responsiveness and anchor jumping positions

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ ul{
 }
 
 header li{
-	display: inline;
+	display: inline-block;
 }
 
 header li:hover{
@@ -45,4 +45,10 @@ header li:hover{
 
 #stages a:hover{
 	color: grey;
+}
+
+.anchor{
+	display: block;
+	padding-top: 100px;
+	margin-top: -100px;
 }
